<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CheckoutActivity">

    <ImageView
        android:id="@+id/shipping_information_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nozama" />

    <TextView
        android:id="@+id/shipping_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/user_shipping_information"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_logo" />

    <EditText
        android:id="@+id/shipping_information_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/address"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_city"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_title"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shipping_information_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/city"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_state"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_address"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shipping_information_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/state"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_city"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shipping_information_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/zip_code"
        android:ems="10"
        android:hint="@string/zip_code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_country"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_state"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shipping_information_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/country"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_zip_code"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shipping_information_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/phone_number"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/shipping_information_button"
        app:layout_constraintTop_toBottomOf="@+id/shipping_information_country"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/shipping_information_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/add_shipping_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>