<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProductUploadActivity">

    <ImageView
        android:id="@+id/register_product_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nozama" />

    <TextView
        android:id="@+id/register_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/new_product_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_product_logo" />

    <EditText
        android:id="@+id/register_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/product_name"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_product_category"
        app:layout_constraintTop_toBottomOf="@+id/register_product_title"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/register_product_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/category"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_product_status"
        app:layout_constraintTop_toBottomOf="@+id/register_product_name"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/register_product_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints="@string/status"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_product_description"
        app:layout_constraintTop_toBottomOf="@+id/register_product_category"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/register_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/description"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/register_product_price"
        app:layout_constraintTop_toBottomOf="@+id/register_product_status"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/register_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/price"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/register_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_product_description" />

    <Button
        android:id="@+id/register_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>